@@ -58,3 +58,8 @@ idle_no_share: no
 // Give additional experience bonus per party-member involved on even-share parties?
 // (eg: If set to 10, a even-share party of 5 people will receive +40% exp)
 party_even_share_bonus: 0
+
+// Party name display option. (Note 1)
+// 0: Aegis - Party name won't appear behind characters name if it doesn't have a guild.
+// 1: eAthena - Party name will appear on both state.
+show_party_name: 0
